--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -7,8 +7,9 @@
   margin-left: auto;
   margin-right: auto;
   background-color: white;
-  padding: 5px 0px 15px 0px;
+  padding: 35px 0px 15px 0px;
   border-radius: 3px;
+  text-align: center;
 }
 
 .review-p {
