--- a/app/views/lures/show.html.erb
+++ b/app/views/lures/show.html.erb
@@ -1,11 +1,3 @@
-<div class="lures-card">
-  <div class=lure-card-box>
+<%= render "lures/lure-card" %>
 
-    <img src="/assets/<%= @lure.image %>" class="lure-img-card" >
-    <div class="lure-name-card">
-      <%= @lure.name %>
-    </div>
-
-  </div>
-  <%= render "reviews/form", review: @review, lure: @lure %>
-</div>
+<%= render "reviews/form", review: @review, lure: @lure %>
