--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .star-box {
-  
+  margin-left: 35px;
 }
 
 .star-rating {
@@ -22,10 +22,6 @@
 
 .star-rating-back{
   color: #cccccc;
-}
-
-.average-score-display{
-  
 }
 
 .review{
